force-app/main/default/objects/OCE__BusinessObjective__c/OCE__BusinessObjective__c.object-meta.xml
<CustomObject>
    <description>Business objective in template for Account Objective.</description>
    <label>Business Objective</label>
    <nameField>
        <label>Business Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Objectives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>