force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__Category__c.field-meta.xml
<CustomField>
    <fullName>OCE__Category__c</fullName>
    <description>Used to import TODOs to Account Tactic.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Library</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>