force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__Description__c.field-meta.xml
<CustomField>
    <fullName>OCE__Description__c</fullName>
    <description>Business Objective Description.</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>