force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__ExpectedOutcome__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExpectedOutcome__c</fullName>
    <description>Expected outcome for Business Objective.</description>
    <label>Expected Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>