force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__Measure__c.field-meta.xml
<CustomField>
    <fullName>OCE__Measure__c</fullName>
    <description>Measurement of Business Objective</description>
    <label>Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Units</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>