force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__ParentLevelObjective__c.field-meta.xml
<CustomField>
    <fullName>OCE__ParentLevelObjective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Parent Level Business Objective</description>
    <label>Parent Level Objective</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <errorMessage>Please select appropriate parent objective</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Territory Business Objective</value>
        </filterItems>
        <filterItems>
            <field>OCE__BusinessObjective__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Affiliate Business Objective</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Affiliate Business Objective</value>
        </filterItems>
        <filterItems>
            <field>OCE__BusinessObjective__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Global Business Objective</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OCE__BusinessObjective__c</referenceTo>
    <relationshipLabel>Business Objectives</relationshipLabel>
    <relationshipName>BusinessObjectives</relationshipName>
    <type>Lookup</type>
</CustomField>