force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__Product__c.field-meta.xml
<CustomField>
    <fullName>OCE__Product__c</fullName>
    <description>Text field with all Products attached to Business Objective with Business Objective Product objects. Updated by trigger on Business Objective Product.</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>