force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__StartDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__StartDate__c</fullName>
    <description>Business Objective Starting Date.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>