force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__Status__c.field-meta.xml
<CustomField>
    <fullName>OCE__Status__c</fullName>
    <description>Business Objective Status.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defined</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Achieved</fullName>
                <isActive>false</isActive>
                <label>Achieved</label>
            </value>
            <value>
                <fullName>Define</fullName>
                <isActive>false</isActive>
                <label>Define</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>