force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__Target__c.field-meta.xml
<CustomField>
    <fullName>OCE__Target__c</fullName>
    <description>Target for Business Objective</description>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>