force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__TargetDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__TargetDate__c</fullName>
    <description>Business Objective Target Date.</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>