force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__TerritoryPlan__c.field-meta.xml
<CustomField>
    <fullName>OCE__TerritoryPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Territory Plan - will be populated for TBO Level only</description>
    <label>Territory Plan</label>
    <referenceTo>OCE__TerritoryPlan__c</referenceTo>
    <relationshipLabel>Business Objectives</relationshipLabel>
    <relationshipName>BusinessObjectives</relationshipName>
    <type>Lookup</type>
</CustomField>