force-app/main/default/objects/OCE__BusinessObjective__c/fields/OCE__Type__c.field-meta.xml
<CustomField>
    <fullName>OCE__Type__c</fullName>
    <description>Type of Business Objective.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create New Business</fullName>
            </value>
            <value>
                <fullName>Competitive Response</fullName>
            </value>
            <value>
                <fullName>Drive Market Share</fullName>
            </value>
            <value>
                <fullName>Formulary Access</fullName>
            </value>
            <value>
                <fullName>Grow Existing Business</fullName>
            </value>
            <value>
                <fullName>Pull-Thru Program</fullName>
            </value>
            <value>
                <fullName>Reduce Rebates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>