force-app/main/default/objects/OCE__BusinessObjective__c/recordTypes/OCE__AffiliateBusinessObjective.recordType-meta.xml
<RecordType>
    <fullName>OCE__AffiliateBusinessObjective</fullName>
    <active>true</active>
    <label>Affiliate Business Objective</label>
</RecordType>