force-app/main/default/objects/OCE__BusinessObjective__c/recordTypes/OCE__GlobalBusinessObjective.recordType-meta.xml
<RecordType>
    <fullName>OCE__GlobalBusinessObjective</fullName>
    <active>true</active>
    <label>Global Business Objective</label>
</RecordType>