force-app/main/default/objects/OCE__BusinessObjective__c/recordTypes/OCE__TerritoryBusinessObjective.recordType-meta.xml
<RecordType>
    <fullName>OCE__TerritoryBusinessObjective</fullName>
    <active>true</active>
    <label>Territory Business Objective</label>
</RecordType>